@@ -1,8 +1,14 @@
 2008-07-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/connection_base.hxx, include/pqxx/transaction_base.hxx,
+ test/unit/test_escape.cxx:
+  - New quote() function templates, using string_traits
+  - New test
  include/pqxx/except.hxx, include/pqxx/util.hxx, src/util.cxx:
   - New exception type conversion_error
   - Added name() and has_null() to string_traits<>
   - Better error messages for null conversions
+ test/unit/test_sql_cursor.cxx:
+  - Simpler way of running multiple tests from one main()
 2008-06-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/except.hxx, include/pqxx/result.hxx, src/connection_base.cxx,
  src/cursor.cxx, src/except.cxx, src/largeobject.cxx, src/result.cxx,
